
2020.3.0rc2 (unreleased)
------------------------

- Improve performance when resolving large dossiers. [deiferni]
- Add Bumblebee auto refresh feature to policy template. [2e12]
- Task GET API: Also include info about containing dossier. [mbaechtold]
- Fix `task_type_helper` to respect the current language for the ram-cache. [elioschmutz]
- Always use Solr for tabbedview listings. [buchi]
- Fix exclusion of search root when using Solr. [buchi]
- Fix bug in table source of trashed documents when using solr. [njohner]
- Extend the ftw.mail.mail workflow with teamraum specific roles. [elioschmutz]
- Extend the `meeting.json`, which will be generated for an exported meeting, with a `agenda_item_list` property which contains a link to the agenda item list document. [elioschmutz]
- Add @allowed-roles-and-principals API endpoint (callable on every context) to get the information which roles, groups or users are allowed to view an object. [tinagerber]
- Extend @users endpoint with roles_and_principals. [tinagerber]


2020.3.0rc1 (2020-04-09)
------------------------

- Fix solr indexing bug when creating a document from a template. [njohner]
- Bump docxcompose to 1.1.0 for header/footer docproperty support. [deiferni]


2020.2.3 (2020-04-04)
---------------------

- Revert always using the `mail_from` for notifications, this breaks customers auto-reply use case. [deiferni]


2020.2.2 (2020-04-03)
---------------------

- Do not show OC checkout and edit buttons when user is in EMM environment. [njohner]
- Prevent documents being edited in Office Online from getting opened in OfficeConnector. [lgraf]
- Add @listing-stats API endpoint to get statistical data from folderish content. [elioschmutz]
- Fix public documentation build. [elioschmutz]


2020.2.1 (2020-03-27)
---------------------

- Backdate AddHiddenFlagToAdminAndOrgUnit upgrade step. [njohner]


2020.2.0 (2020-03-24)
---------------------
