@@ -9,6 +9,7 @@ Changelog
 - Task GET API: Also include info about containing dossier. [mbaechtold]
 - Fix `task_type_helper` to respect the current language for the ram-cache. [elioschmutz]
 - Always use Solr for tabbedview listings. [buchi]
+- Enable Solr by default. [buchi]
 - Fix exclusion of search root when using Solr. [buchi]
 - Fix bug in table source of trashed documents when using solr. [njohner]
 - Extend the ftw.mail.mail workflow with teamraum specific roles. [elioschmutz]
